# template

./: .coveragerc  .editorconfig  .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
.github/: main.yml
.github/workflows/: main.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/huti/: __init__.py  __init__.pyi  __main__.py  alias.py  classes.py  classes.pyi  color.py  color.pyi  constants.py  datas.py  enums.py  exceptions.py  functions.py  huti.pth  meta.py  meta.pyi  path.py  path.pyi  project.py  pth.py  repo.py  start.py  typings.py  variables.py
src/huti/cli/: __init__.py  app.py  dependencies.py
src/huti/data/: Brewfile
src/huti/env/: __init__.py  default.py  env.py  main.py  misc.py  osrelease.py  secrets.py  system.py
src/template/: __init__.py  __main__.py  conftest.py  constants.py  main.py
tests/: conftest.py  test_import.py  test_install.py
