[project]
dependencies = [
    "nodeps[pretty]",
    "typer[all] >= 0.9, <1",
]
[project.optional-dependencies]
dev = [
    "nodeps[all,dev]",
]

[project.scripts]
template-test = "template.__main__:app"

[build-system]
requires = ["nodeps", 'setuptools', 'setuptools_scm', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
