[project]
dependencies = [
    "nodeps[pretty]",
    "typer[all] >= 0.9, <1",
]

[project.optional-dependencies]
dev = [
    "nodeps[all,dev]",
]

[project.scripts]
template-test = "template.__main__:app"


[project.urls]
Homepage = "https://github.com/j5pu/template"

[build-system]
requires = ["nodeps", 'setuptools', 'setuptools_scm', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
