[global]
quiet = 1
verbose = 0
show_warnings = false

[egg_info]
egg_base = /tmp

[options]
cmdclass =
  build_py = nodeps.PTHBuildPy
  develop = nodeps.PTHDevelop
  easy_install = nodeps.PTHEasyInstall
  install_lib = nodeps.PTHInstallLib
include_package_data = True
packages = find:
package_dir =
  = src
scripts =
  bin/huti-script

[options.data_files]
bin =
    bin/*
;/etc/gitconfig =
;    .gitconfig
;/etc/profile.d =
;    lib/*
;etc/gh =
;    gh/*
[options.packages.find]
where = src

[options.package_data]
huti =
  *.pth
huti.data =
  *


# TODO: etc data files y CLI con completions
